<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.weclont.mesget.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mesget_child_version"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/server_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/server_ip"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/ett_ip"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:hint="@string/device_name"
        android:paddingTop="0dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/server_ip"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/server_ip" />

    <TextView
        android:id="@+id/server_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/server_port"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ett_ip" />

    <EditText
        android:id="@+id/ett_port"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:hint="@string/device_name"
        android:paddingTop="0dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/server_port"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/server_port" />

    <TextView
        android:id="@+id/user_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/inputtext"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ett_port" />

    <EditText
        android:id="@+id/ett_mcname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:hint="@string/device_name"
        android:paddingTop="0dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/user_device_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_device_name" />

    <View
        android:id="@+id/button_box"
        android:layout_width="185dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ett_mcname" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape1"
        android:onClick="btnonClickSaveMCNameData"
        android:text="@string/save_msg"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/button_box"
        app:layout_constraintTop_toTopOf="@id/button_box" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@drawable/btn_shape1"
        android:onClick="onFinishMainActivity"
        android:text="@string/finish_activity"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/button1"
        app:layout_constraintTop_toTopOf="@id/button_box" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="179dp"
        android:layout_height="174dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_box"
        app:srcCompat="@drawable/sysu" />


</androidx.constraintlayout.widget.ConstraintLayout>